Revert "- Reduce usage of guava."