@@ -1,6 +1,7 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.searchlib.rankingexpression.rule;
 
+import com.google.common.collect.ImmutableList;
 import com.yahoo.searchlib.rankingexpression.evaluation.Context;
 import com.yahoo.searchlib.rankingexpression.evaluation.Value;
 
@@ -17,23 +18,27 @@ public final class Arguments implements Serializable {
 
     public static final Arguments EMPTY = new Arguments();
 
-    private final List<ExpressionNode> expressions;
+    private final ImmutableList<ExpressionNode> expressions;
 
     public Arguments() {
-        this(List.of());
+        this(ImmutableList.of());
     }
 
     public Arguments(ExpressionNode singleArgument) {
-        this(List.of(singleArgument));
+        this(ImmutableList.of(singleArgument));
     }
 
     public Arguments(List<? extends ExpressionNode> expressions) {
         if (expressions == null) {
-            this.expressions = List.of();
+            this.expressions = ImmutableList.of();
             return;
         }
 
-        this.expressions = List.copyOf(expressions);
+        // Build in a roundabout way because java generics and lists
+        ImmutableList.Builder<ExpressionNode> b = ImmutableList.builder();
+        for (ExpressionNode node : expressions)
+            b.add(node);
+        this.expressions = b.build();
     }
 
     /** Returns an unmodifiable list of the expressions in this, never null */
